qt/multimedia/gen_qmediaaudioprobecontrol.h

class QAudioBuffer;
class QMediaAudioProbeControl;
class QMetaObject;
typedef struct QAudioBuffer QAudioBuffer;
typedef struct QMediaAudioProbeControl QMediaAudioProbeControl;
typedef struct QMetaObject QMetaObject;
QMetaObject* QMediaAudioProbeControl_metaObject(const QMediaAudioProbeControl* self);
void* QMediaAudioProbeControl_metacast(QMediaAudioProbeControl* self, const char* param1);
int QMediaAudioProbeControl_metacall(QMediaAudioProbeControl* self, int param1, int param2, void** param3);
struct miqt_string QMediaAudioProbeControl_tr(const char* s);
struct miqt_string QMediaAudioProbeControl_trUtf8(const char* s);
void QMediaAudioProbeControl_audioBufferProbed(QMediaAudioProbeControl* self, QAudioBuffer* buffer);
void QMediaAudioProbeControl_connect_audioBufferProbed(QMediaAudioProbeControl* self, intptr_t slot);
void QMediaAudioProbeControl_flush(QMediaAudioProbeControl* self);
void QMediaAudioProbeControl_connect_flush(QMediaAudioProbeControl* self, intptr_t slot);
struct miqt_string QMediaAudioProbeControl_tr2(const char* s, const char* c);
struct miqt_string QMediaAudioProbeControl_tr3(const char* s, const char* c, int n);
struct miqt_string QMediaAudioProbeControl_trUtf82(const char* s, const char* c);
struct miqt_string QMediaAudioProbeControl_trUtf83(const char* s, const char* c, int n);
const QMetaObject* QMediaAudioProbeControl_staticMetaObject();
void QMediaAudioProbeControl_delete(QMediaAudioProbeControl* self);